@@ -1,5 +1,8 @@
 == 0.4.3 (In Git)
 
+=== New Features
+* Ast::Table can now be constructed with an Array of Hash. (Aslak Hellesøy)
+
 == 0.4.2 2009-10-14
 
 Bugfix release. The 0.4.1 release was hosed when switching from Hoe to Jeweler.
